--- a/app/views/supports/edit.html.erb
+++ b/app/views/supports/edit.html.erb
@@ -44,4 +44,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', :back %>
+<%#= link_to 'Back', :back %>
+<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'supports' %>
