--- a/app/views/ticket_states/edit.html.erb
+++ b/app/views/ticket_states/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @ticket_state %> |
-<%= link_to 'Back', ticket_states_path %>
+<%#= link_to 'Show', @ticket_state %> |
+<%#= link_to 'Back', ticket_states_path %>
+<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'states' %>
