--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @role %> |
-<%= link_to 'Back', roles_path %>
+<%#= link_to 'Show', @role %> |
+<%#= link_to 'Back', roles_path %>
+<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'roles' %>
