Changed tickets view and some CSS redesign

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,7 @@
 
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
-  <%#= javascript_include_tag 'http://www.google.com/jsapi' %>
-  <%= javascript_include_tag 'http://code.jquery.com/ui/1.11.0/jquery-ui.js' %>
-
-  <%= javascript_include_tag 'tickets.js' %>
+  <%= javascript_include_tag 'welcome.js' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
