--- a/app/views/ticket_states/index.html.erb
+++ b/app/views/ticket_states/index.html.erb
@@ -1,7 +1,7 @@
 <!-- <h1>Listing Ticket States</h1> -->
 
 <% if @ticket_states %>
-    <table border='1'>
+    <table>
       <thead>
       <tr>
         <th width=50%>Name</th>
