--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -40,10 +40,11 @@ div.container {
 
 footer#page_footer {
   background-color: #807c77;
+  border-top: 1px solid #4c2719; // maybe temporary
   border-bottom: 10px solid #4c2719;
   color: #fff;
   font-size: 0.7em;
-  height: 100px;
+  height: 30px;
   padding: 10px 20px;
   width: auto;
 
@@ -61,6 +62,7 @@ footer#page_footer {
       border-right: 1px solid #fef8e7;
       display: inline;
       margin: 0;
+
       &:last-child {
         border-right: none;
       }
