--- a/app/assets/stylesheets/navigation.css.scss
+++ b/app/assets/stylesheets/navigation.css.scss
@@ -1,12 +1,14 @@
+$link_color: #865140;
+
 nav#main_nav {
   position: absolute;
     top: 50px;
     left: 300px;
   li {
-    background: #865140;
+    background: $link_color;
     display: inline-block;
     margin: 0 2px;
-    padding: 4px 6px;
+    padding: 6px 12px;
 
     a, a:link, a:visited {
       color: #fff;
@@ -23,30 +25,10 @@ nav#main_nav {
       font-weight: bold;
       }
     }
-  }
-}
 
-nav#breadcrumbs {
-  background: #ddd;
-  li {
-    display: inline-block;
-    margin: 0 2px;
-    padding: 4px 6px;
-    a,
-    a:link,
-    a:visited {
-      padding-right: 12px;
-      color: #000;
-    }
-
-    &:after {
-      content: " » ";
-    }
-
-    &:last-child {
-      &:after {
-        content: "";
-      }
+    &:hover {
+      background-color: lighten($link_color, 9%);
     }
   }
 }
+
