--- a/app/assets/stylesheets/tickets.css.scss
+++ b/app/assets/stylesheets/tickets.css.scss
@@ -2,6 +2,161 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+/* BASIC RESET */
+ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,html,p,blockquote,fieldset,input {
+  margin:0;
+  padding:0;
+}
+
+/* HTML ELEMENTS */
+body {
+  background-image:url("wood_bg.jpg");
+  font: 14px Georgia, serif;
+}
+
+/*
+h1 { font: bold 65px/60px Helvetica, Arial, Sans-serif; text-align: center; color: #eee; text-shadow: 0 2px 6px #333; }
+h1 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; display: block; color: #ccc; }
+h2 a { display: block; text-decoration: none; margin: 0 0 30px 0; font: italic 45px Georgia, Times, Serif;  text-align: center; color: #bfe1f1; text-shadow: 0 2px 6px #333; }
+h2 a:hover { color: #90bcd0; }
+a { outline:none; }
+*/
+
+/* COMMON CLASSES */
+.break { clear:both; }
+
+/* WRAPPER */
+/* #wrapper { width: 1200px; margin:5px auto; } */
+#wrapper { margin:5px auto; }
+
+/* CONTENT */
+#content { }
+#content p { margin:20px; }
+
+/* MENU
+#menu { margin: 20px 0 0 10px; }
+*/
+#menu { margin: 10px 0 0 0; }
+#menu ul { list-style:none; }
+#menu ul li { display:inline; float:left; margin-bottom:20px; }
+
+/* :first-child pseudo selector with rounded top left corner */
+/* #menu ul li:first-child a { border-top-left-radius: 12px; } */
+
+/* :last-child pseudo selector with rounded top right corner */
+/* #menu ul li:last-child a { border-top-right-radius: 12px; } */
+
+/* background color set to RGBA, with opacity on 0.3 and also using text-shadow */
+#menu ul li a {
+  padding:20px;
+  background: rgba(255,138,30,0.3);
+  text-decoration: none;
+  font: bold 14px Helvetica, Sans-Serif;
+  letter-spacing: 1px;
+  color: #402e16;
+  text-shadow: #eee 0 0 2px;
+}
+
+/* hover state shows a linear gradient and opacity it brought down to 0.9 and also shows a very slight grey gradient on top */
+#menu ul li a:hover {
+  box-shadow: 0 -5px 10px #777;
+  background: linear-gradient(right bottom, rgb(237,227,112) 0%, rgb(255,173,10) 72%) !important;
+  background-color:rgb(255,173,10) !important;
+  filter:alpha(opacity=90);
+  opacity:.90; }
+
+/* another RGBA background, now with an opacity of 0.8 */
+/*
+#menu ul li a.active {
+  background: rgba(255,138,30,0.8) !important;
+}
+*/
+
+/* main contents with RGBA background (same colour as active tab) and three rounded corners
+ width:1200px; margin-left:10px;
+ */
+
+#main {
+  clear:both;
+//  background: rgba(255,138,30,0.8);
+
+  margin: 0;
+  padding: 0;
+
+  height: 780px; // need dynamic changing
+  overflow-y: auto;
+}
+
+.row {
+  width: 100%;
+  height: 363px; // need dynamic changing
+}
+
+.d1, .d3, {
+  float:left;
+  width: 50%; // need change
+  margin-right: 0;
+}
+
+.d2, .d4, {
+  float:right;
+  width: 50%; // need change
+}
+
+$step: 5%;
+$d1_color: darkred;
+.d1 {
+  margin-bottom: 4px;
+  background-color: $d1_color;
+
+  &:hover {
+    background-color: lighten($d1_color, $step);
+  }
+}
+
+$d2_color: darkblue;
+.d2 {
+  margin-bottom: 4px;
+  background-color: $d2_color;
+
+  &:hover {
+    background-color: lighten($d2_color, $step);
+  }
+}
+
+$d3_color: darkgoldenrod;
+.d3 {
+  //clear:both;
+  background-color: $d3_color;
+
+  &:hover {
+    background-color: lighten($d3_color, $step);
+  }
+}
+
+$d4_color: darkolivegreen;
+.d4 {
+  background-color: $d4_color;
+
+  &:hover {
+    background-color: lighten($d4_color, $step);
+  }
+}
+
+/* header with a text-shadow */
+#main h3 {
+  text-transform:uppercase;
+  padding:20px 0 20px 0;
+  color:#eee;
+  text-shadow: #000 0 0 2px;
+  margin-bottom: 0;
+}
+
+#main p {
+  padding-bottom:20px;
+  color:#ddd;
+}
+
 .status {
   color: blue;
 }
