--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -18,6 +18,7 @@
   border-style: solid;
   border-width: 2px;
   border-color: darkgoldenrod;
+  padding: 20px 20px 0 20px;
 
 //  margin-top: 20px;
 
