--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -70,7 +70,7 @@
     <% end %>
 
     <h2>Add a comment:</h2>
-    <%= form_for ([@ticket, @ticket.comments.new]) do |f| %>
+    <%= form_for ([@ticket, @ticket.comments.build]) do |f| %>
         <%= f.hidden_field :owner_id, value: session[:user_id] %>
         <p>
           <%= f.label :body %><br>
