--- a/app/views/tickets/_index.html.erb
+++ b/app/views/tickets/_index.html.erb
@@ -1,24 +1,133 @@
-<!-- <h2>Listing tickets</h2> -->
+<div class="d1 row" id="left_top">
+  <p>Left top cell [unassigned]</p>
+  <%
+     # in this array we can late add new ticket_state ID witch we want to display in some cell
+     # need create gui to select ids for active cell
+     ids = [1, 2]
 
-<table border='1'>
-  <thead>
-  <tr>
-    <th width=10%>UUID</th>
-    <th width=15%>State</th>
-    <th width=5%>Owner</th>
-    <th width=10%>Username</th>
-    <th width=10%>E-mail</th>
-    <th width=15%>Subject</th>
-    <th>Problem</th>
-    <th colspan="3">Actions</th>
-  </tr>
-  </thead>
+     # select tickets fields and ticket_states.name field too
+     #@unassigned = Ticket.select('*').joins(:ticket_state).where("ticket_states.id IN (?) AND support_id NOT NULL", ids)
 
-  <tbody>
-  <% @tickets.each do |ticket| %>
-      <%= render partial: 'tickets/table_row', locals: {ticket: ticket} %>
-  <% end %>
-  </tbody>
-</table>
+     # select only tickets field
+     @unassigned = Ticket.joins(:ticket_state).where("ticket_states.id IN (?) AND support_id NOT NULL", ids)
+     #puts debug(@unassigned)
+  %>
 
-<%#= link_to 'Home', action: 'index', controller: 'welcome' %>
+  <table width="100%">
+    <thead>
+    <tr>
+      <th>UUID</th>
+      <th>State</th>
+      <th>Owner</th>
+      <th>Username</th>
+      <th>E-mail</th>
+      <th>Subject</th>
+      <th>Problem</th>
+      <th colspan="3">Actions</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <%= render partial: 'tickets/table_row', collection: @unassigned, as: :ticket %>
+    </tbody>
+  </table>
+</div>
+
+
+<div class="d2 row" id="right_top">
+  <p>Right top cell [opened]</p>
+  <%
+     @opened = Ticket.where('support_id IS NULL')
+  %>
+
+  <table width="100%">
+    <thead>
+    <tr>
+      <th>UUID</th>
+      <th>State</th>
+      <th>Owner</th>
+      <th>Username</th>
+      <th>E-mail</th>
+      <th>Subject</th>
+      <th>Problem</th>
+      <th colspan="3">Actions</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <%= render partial: 'tickets/table_row', collection: @opened, as: :ticket %>
+    </tbody>
+  </table>
+</div>
+
+
+<div class="d3 row" id="right_top">
+  <p>Left bottom cell [on hold]</p>
+
+  <%
+     # in this array we can late add new ticket_state ID witch we want to display in some cell
+     # need create gui to select ids for active cell
+     ids = [3]
+
+     # select tickets fields and ticket_states.name field too
+     #@onhold = Ticket.select('*').joins(:ticket_state).where("ticket_states.id IN (?)", ids)
+
+     # select only tickets field
+     @onhold = Ticket.joins(:ticket_state).where("ticket_states.id IN (?)", ids)
+  %>
+
+  <table width="100%">
+    <thead>
+    <tr>
+      <th>UUID</th>
+      <th>State</th>
+      <th>Owner</th>
+      <th>Username</th>
+      <th>E-mail</th>
+      <th>Subject</th>
+      <th>Problem</th>
+      <th colspan="3">Actions</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <%= render partial: 'tickets/table_row', collection: @onhold, as: :ticket %>
+    </tbody>
+  </table>
+</div>
+
+
+<div class="d4 row" id="right_bottom">
+  <p>Right bottom cell [closed]</p>
+
+  <%
+     # in this array we can late add new ticket_state ID witch we want to display in some cell
+     # need create gui to select ids for active cell
+     ids = [4, 5]
+
+     # select tickets fields and ticket_states.name field too
+     #@closed = Ticket.select('*').joins(:ticket_state).where("ticket_states.id IN (?)", ids)
+
+     # select only tickets field
+     @closed = Ticket.joins(:ticket_state).where("ticket_states.id IN (?)", ids)
+  %>
+
+  <table width="100%">
+    <thead>
+    <tr>
+      <th>UUID</th>
+      <th>State</th>
+      <th>Owner</th>
+      <th>Username</th>
+      <th>E-mail</th>
+      <th>Subject</th>
+      <th>Problem</th>
+      <th colspan="3">Actions</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <%= render partial: 'tickets/table_row', collection: @closed, as: :ticket %>
+    </tbody>
+  </table>
+</div>
