--- a/app/views/tickets/_table_row.html.erb
+++ b/app/views/tickets/_table_row.html.erb
@@ -1,4 +1,4 @@
-<tr class="<%= cycle("even", "odd")%>">
+<tr class="<%= cycle('even', 'odd') %>">
   <td><%= ticket.uuid %></td>
   <td><%= ticket.current_status %></td>
   <td><%= ticket.current_support %></td>
