--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,24 +2,31 @@
   <nav id="utility">
     <p>
       <% unless session[:login] %>
-          <%= content_tag :div, yield(:form_login), :id => 'form_login' %>
+          <%= content_tag :div, render(partial: 'layouts/login'), :id => 'form_login' %>
       <% end %>
 
       <% if session[:login] %>
-        You are logged in as <strong><%= session[:login] %></strong>
-        <%= link_to '[Your Account]', controller: 'supports', action: 'edit', id: session[:user_id] %>
-        <%= link_to '[Logout]', controller: 'supports', action: 'logout' %>
+          You are logged in as <strong><%= session[:login] %></strong>
+          <%= link_to '[Your Account]', controller: 'supports', action: 'edit', id: session[:user_id] %>
+          <%= link_to '[Logout]', controller: 'supports', action: 'logout' %>
       <% end %>
     </p>
   </nav>
 
   <nav id="main_nav" role="navigation">
     <ul>
-      <li><%= link_to 'Home', 'root_path' %></li>
-      <li><%= link_to 'Creations', 'creations_path' %></li>
-      <li><%= link_to 'Campaigns', 'campaigns_path' %></li>
-      <li><%= link_to 'Projects', 'projects_path' %></li>
-      <li><%= link_to 'Designers', 'designers_path' %></li>
+      <% if !session[:login] %>
+          <li><%= link_to 'Home', '#' %></li>
+          <li><%= link_to 'Creations', '#' %></li>
+          <li><%= link_to 'Campaigns', '#' %></li>
+          <li><%= link_to 'Projects', '#' %></li>
+          <li><%= link_to 'Designers', '#' %></li>
+      <% else %>
+          <li><%= link_to 'Tickets', controller: 'tickets' %></li>
+          <li><%= link_to 'Supports', controller: 'supports' %></li>
+          <li><%= link_to 'Roles', controller: 'roles' %></li>
+          <li><%= link_to 'States', controller: 'ticket_states' %></li>
+      <% end %>
     </ul>
   </nav>
 </header>
