--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'roles' %>
+<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'roles' %>
