--- a/app/views/supports/edit.html.erb
+++ b/app/views/supports/edit.html.erb
@@ -45,4 +45,4 @@
 <% end %>
 
 <%#= link_to 'Back', :back %>
-<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'supports' %>
+<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'supports' %>
