--- a/app/views/supports/show.html.erb
+++ b/app/views/supports/show.html.erb
@@ -20,6 +20,6 @@
 
 <br>
 
-<%= link_to 'Home', controller: 'welcome' %>
+<%= link_to 'Home', controller: 'application' %>
 | <%= link_to 'New support', controller: 'supports', action: 'new' %>
 | <%= link_to 'Edit', edit_support_path(@support) %>
