--- a/app/views/ticket_states/edit.html.erb
+++ b/app/views/ticket_states/edit.html.erb
@@ -4,4 +4,4 @@
 
 <%#= link_to 'Show', @ticket_state %> |
 <%#= link_to 'Back', ticket_states_path %>
-<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'states' %>
+<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'states' %>
