--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -43,4 +43,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'tickets' %>
+<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'tickets' %>
