--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -72,3 +72,116 @@ div {
     list-style: square;
   }
 }
+
+
+//
+// from welcome
+//
+.label {
+  text-align: right;
+}
+
+.search {
+  text-align: right;
+  float: right;
+
+  // lock to (bottom, right) edges
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+
+.form_login {
+  border-style: solid;
+  border-width: 2px;
+  border-color: darkgoldenrod;
+
+  background-color: lightgoldenrodyellow;
+}
+
+.form_search {
+  border-style: solid;
+  border-width: 2px;
+  border-color: darkgoldenrod;
+  padding: 20px 20px 0 20px;
+
+  //  margin-top: 20px;
+
+  background-color: lightgoldenrodyellow;
+}
+
+.form_field {
+  margin: 5px;
+}
+
+.link_logout {
+  font-weight: bold;
+
+  background-color: lightsalmon;
+}
+
+.link_newticket {
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+  //color: yellow;
+  font-weight: bold;
+
+  //height: 30px;
+  //background-color: limegreen;
+}
+
+/*
+.message{
+  background-size: 40px 40px;
+  background-image: linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%,
+          transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%,
+          transparent 75%, transparent);
+  box-shadow: inset 0 -1px 0 rgba(255,255,255,.4);
+  width: 100%;
+  border: 1px solid;
+  color: #fff;
+  padding: 15px;
+  position: fixed;
+  _position: absolute;
+  text-shadow: 0 1px 0 rgba(0,0,0,.5);
+  animation: animate-bg 5s linear infinite;
+}
+
+.info{
+  background-color: #4ea5cd;
+  border-color: #3b8eb5;
+}
+
+.error{
+  background-color: #de4343;
+  border-color: #c43d3d;
+}
+
+.warning{
+  background-color: #eaaf51;
+  border-color: #d99a36;
+}
+
+.success{
+  background-color: #61b832;
+  border-color: #55a12c;
+}
+
+.message h3{
+  margin: 0 0 5px 0;
+}
+
+.message p{
+  margin: 0;
+}
+
+@keyframes animate-bg {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: -80px 0;
+  }
+}
+*/
