--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,15 @@
 <footer id="page_footer">
   <ul>
-    <li><%= link_to "Contact", "" %></li>
-    <li><%= link_to "Help", "" %></li>
-    <li><%= link_to "File a Bug", "" %></li>
+    <li><%= link_to 'Contact', '#' %></li>
+    <li><%= link_to 'Help', '#' %></li>
+    <% unless session[:user_id] %>
+        <li><%= link_to 'Send a bug', {controller: 'tickets', action: 'new'} %></li>
+    <% end %>
+
   </ul>
-  <p>&copy; 2011 AwesomeCo. All Rights Reserved. All Wrongs Reversed.</p>
+  <p>&copy; 2014 OnApp. All Rights Reserved. All Wrongs Reversed.</p>
+
+  <h2>
+    <div class="search"><%= render 'layouts/search' %></div>
+  </h2>
 </footer>
