--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -12,4 +12,4 @@
 
 <%#= link_to 'Edit', edit_role_path(@role) %> |
 <%#= link_to 'Back', roles_path %>
-<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'roles' %>
+<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'roles' %>
