--- a/app/views/supports/new.html.erb
+++ b/app/views/supports/new.html.erb
@@ -58,4 +58,4 @@
     </p>
 <% end %>
 
-<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'supports' %>
+<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'supports' %>
