--- a/app/views/ticket_states/index.html.erb
+++ b/app/views/ticket_states/index.html.erb
@@ -1,31 +1,25 @@
-<!-- <h1>Listing Ticket States</h1> -->
+<table>
+  <thead>
+  <tr>
+    <th width=50%>Name</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
 
-<% if @ticket_states %>
-    <table>
-      <thead>
-      <tr>
-        <th width=50%>Name</th>
-        <th colspan="3"></th>
+  <tbody>
+  <% @ticket_states.each do |ticket_state| %>
+      <tr class="<%= cycle('even', 'odd') %>">
+        <td><%= ticket_state.name %></td>
+
+        <td><%= link_to 'Edit', edit_ticket_state_path(ticket_state) %></td>
+        <% if session[:role_name] == 'admin' %>
+            <td><%= link_to 'Destroy', ticket_state, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        <% end %>
       </tr>
-      </thead>
+  <% end %>
 
-      <tbody>
-      <% @ticket_states.each do |ticket_state| %>
-          <tr class="<%= cycle("even", "odd") %>">
-            <td><%= ticket_state.name %></td>
-
-            <td><%= link_to 'Edit', edit_ticket_state_path(ticket_state) %></td>
-            <% if session[:role_name] == 'admin' %>
-                <td><%= link_to 'Destroy', ticket_state, method: :delete, data: {confirm: 'Are you sure?'} %></td>
-            <% end %>
-          </tr>
-      <% end %>
-
-      </tbody>
-    </table>
-<% end %>
-
-<%#= link_to 'Home', action: 'index', controller: 'welcome' %>
+  </tbody>
+</table>
 
 <% if session[:role_name] == 'admin' %>
     <%= link_to 'New Ticket State', new_ticket_state_path %>
