--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -6,9 +6,9 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', controller: 'welcome', action: 'index', anchor: 'tickets' %>
+<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'tickets' %>
 
 <% unless session[:user_id] %>
-<%= link_to 'Home', controller: 'welcome', action: 'index', anchor: 'home' %>
-| <%= link_to 'New ticket', action: 'new', controller: 'tickets' %>
+<%= link_to 'Home', controller: 'application', action: 'index', anchor: 'home' %>
+| <%= link_to 'New ticket', controller: 'tickets', action: 'new' %>
 <% end %>
