Created user notification by ActionMailer Changed some CSS Changed index view tickets and using partial Fixed some error in ticket update

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,15 @@
  *= require forms
  */
 
-table tr.even td { background-color: linen; }
-table tr.odd td { background-color: lightblue; }
+table tr.even td {
+    background-color: linen;
+}
 
+table tr.odd td {
+    background-color: lightblue;
+}
+
+body {
+    background-image:url("wood_bg.jpg");
+    font: 14px Georgia, serif;
+}
