--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -2,6 +2,4 @@
 
 <%= render 'form' %>
 
-<%#= link_to 'Show', @role %> |
-<%#= link_to 'Back', roles_path %>
-<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'roles' %>
+<%= link_to 'Back', controller: 'roles', action: 'index' %>
