--- a/app/views/ticket_states/edit.html.erb
+++ b/app/views/ticket_states/edit.html.erb
@@ -2,6 +2,4 @@
 
 <%= render 'form' %>
 
-<%#= link_to 'Show', @ticket_state %> |
-<%#= link_to 'Back', ticket_states_path %>
-<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'states' %>
+<%= link_to 'Back', controller: 'ticket_states', action: 'index' %>
