--- a/app/views/tickets/show_by_uuid.html.erb
+++ b/app/views/tickets/show_by_uuid.html.erb
@@ -1,9 +1,7 @@
-
 <%= render 'form' %>
 
-<% if session[:user_id] %>
-    <%= link_to 'Back', controller: 'tickets' %>
+<% if authorized? %>
+  <%= link_to 'Back', controller: 'tickets' %>
 <% else %>
-    <%= link_to 'Home', controller: 'application' %>
-    | <%= link_to 'New ticket', controller: 'tickets', action: 'new' %>
+  <%= link_to 'New ticket', controller: 'tickets', action: 'new' %>
 <% end %>
