--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,6 @@
 <footer id="page_footer">
   <ul>
-    <li><%= link_to 'Contact', '#' %></li>
-    <li><%= link_to 'Help', '#' %></li>
+    <li><%= link_to 'Contact', '/contact' %></li>
     <% unless session[:user_id] %>
         <li><%= link_to 'Send a bug', {controller: 'tickets', action: 'new'} %></li>
     <% end %>
