--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,9 @@
 </head>
 <body>
 
-
-
 <div class="container">
-  <%= render(partial: 'layouts/header') %>
-  <%= render(partial: 'layouts/home') %>
+  <%= render partial: 'layouts/header' %>
+  <%= render partial: 'layouts/home' %>
 
   <section id="content">
     <div id="wrapper">
@@ -22,7 +20,7 @@
     </div>
   </section>
 
-  <%= render(partial: 'layouts/footer') %>
+  <%= render partial: 'layouts/footer' %>
 </div>
 
 </body>
