--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -13,16 +13,15 @@
         <td><%= raw role.name %></td>
         <td><%= raw role.description %></td>
 
-        <td><%= link_to 'Edit', edit_role_path(role) %></td>
-        <% if session[:role_name] == 'admin' %>
-          <td><%= link_to 'Destroy', role, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to image_tag('edit-icon.png'), edit_role_path(role) %></td>
+        <%= admin_area do %>
+          <td><%= link_to image_tag('delete-trash.png'), role, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%#= link_to 'Home', controller: 'application', action: 'index' %>
-<% if session[:role_name] == 'admin' %>
-    <%= link_to 'New Role', new_role_path %>
+<%= admin_area do %>
+   <%= link_to 'New Role', new_role_path %>
 <% end %>
