--- a/app/views/supports/edit.html.erb
+++ b/app/views/supports/edit.html.erb
@@ -44,5 +44,4 @@
   </p>
 <% end %>
 
-<%#= link_to 'Back', :back %>
-<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'supports' %>
+<%= link_to 'Back', controller: 'supports', action: 'index' %>
